<?xml version="1.0"?>
<package format="3">
  <name>move_group_result_streamer_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for the move_group_result_streamer package</description>

  <maintainer email="jkaminski@tormach.com">Jakub Kaminski</maintainer>
  <license>Tormach Internal License</license>

  <url type="website">TODO</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Add this line -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
