<?xml version="1.0"?>
<package>
  <name>move_group_result_streamer_msgs</name>
  <version>0.0.0</version>
  <description>
    Message definitions for the move_group_result_streamer package
  </description>

  <maintainer email="jkaminski@todo.com">Jakub Kaminski</maintainer>
  <author email="jkaminski@todo.com">Jakub Kaminski</author>

  <license>MIT</license>

  <url type="website">TODO</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
